--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,12 +28,17 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        python -m pip install flake8 pytest
-        python -m pip install flake8 pytest
-        python -m pip install flake8 pytest
-        python -m pip install flake8 pytest
-        python -m pip install flake8 pytest
-        python -m pip install flake8 pytest
+        python -m pip install streamlit  pytest
+        python -m pip install pandas pytest
+        python -m pip install numpy pytest
+        python -m pip install openpyxl pytest
+        python -m pip install xlrd pytest
+    
+        
+
+
+
+
 
 
 
