--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,12 +27,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        python -m pip install streamlit  pytest
-        python -m pip install pandas pytest
-        python -m pip install numpy pytest
-        python -m pip install openpyxl pytest
-        python -m pip install xlrd pytest
+         pip install -r requirements.txt
+         streamlit run app.py
+
+
     
         
 
